fix(buttons) clickable area for the staged changes button and unicode mixin alignment

--- a/app/modules/main/directives/rlPublisherFilterNav/rlPublisherFilterNav.scss
+++ b/app/modules/main/directives/rlPublisherFilterNav/rlPublisherFilterNav.scss
@@ -43,6 +43,7 @@ main > nav {
 
     position: relative;
     min-width: $width;
+    padding: 0px;
 
     &:hover label[for=staged_changes] em {
       background-color: darken($color-danger, 10);
@@ -91,6 +92,7 @@ main > nav {
       width: 100%;
       cursor: inherit;
       line-height: initial;
+      padding: ($spacing-default / 3) $spacing-small;
 
       em {
         $size: 1.4em;
